--- a/WebContent/style/css/web.css
+++ b/WebContent/style/css/web.css
@@ -24,12 +24,12 @@ body {
 
 #panel {
 	height: 55px;
-	color:#fff;
-	text-shadow:1px 1px 0px #111111;
-	background:#3b75b4;
-	background:-moz-linear-gradient(top, #064884 0%, #3b75b4 100%);
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#064884), color-stop(100%,#3b75b4));
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#064884', endColorstr='#3b75b4',GradientType=0);
+	color: #fff;
+	text-shadow: 1px 1px 0px #000;
+	background: #3b75b4;
+	background: -moz-linear-gradient(top, #064884 0%, #3b75b4 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #064884), color-stop(100%, #3b75b4));
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#064884', endColorstr='#3b75b4', GradientType=0);
 	border: 1px solid #3b75b4;
 }
 
@@ -48,61 +48,55 @@ body {
 
 #menu #main {
 	height: 36px;
-	font-size: 16px;
-	border-bottom: 2px solid #808080;
-	color:#fff;
-	text-shadow:1px 1px 0px #6b7735;
-	background:#7d8f33;
-	background:-moz-linear-gradient(top, #93aa4c 0%, #7d8f33 100%);
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#93aa4c), color-stop(100%,#7d8f33));
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#93aa4c', endColorstr='#7d8f33',GradientType=0);
-	border: 1px solid #6b7735;
+	color: #fff;
+	font-size: 14px;
+	font-weight: bold;
+	background: #7d8f33;
+	text-shadow: 1px 1px 0px #000;
+	background: -moz-linear-gradient(top, #93aa4c 0%, #7d8f33 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #93aa4c), color-stop(100%, #7d8f33));
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#93aa4c', endColorstr='#7d8f33', GradientType=0);
 }
 
-/*
-#menu #main dd:HOVER {
-	background:#93aa4c;
-	background:-moz-linear-gradient(top, #7d8f33 0%, #93aa4c 100%);
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#7d8f33), color-stop(100%,#93aa4c));
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#7d8f33', endColorstr='#93aa4c',GradientType=0);
-}*/
-
 #menu #main dd {
-	height: 16px;
-	margin: 10px 0;
+	height: 36px;
 	padding: 0 30px;
-	line-height: 16px;
-	border-right: 1px solid #808080;
+	line-height: 36px;
+	cursor: pointer;
+}
+
+#menu #main dd:HOVER {
+	
+}
+
+#menu #main dd.active {
+	
 }
 
 #menu #second {
-	height: 24px;
-	color:#555;
-	text-shadow:1px 1px 0px #fff;
+	height: 30px;
+	color: #555;
 	font-weight: bold;
-	background:#ddd;
-	background:-moz-linear-gradient(top, #eeeeee 0%, #dddddd 100%);
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#eeeeee), color-stop(100%,#dddddd));
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#eeeeee', endColorstr='#dddddd',GradientType=0);
-	border:1px solid #ccc;
-}
-
-#menu #second:HOVER {
-	color: #000;
-	background:#eee;
-	background:-moz-linear-gradient(top, #dddddd 0%, #eeeeee 100%);
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#dddddd), color-stop(100%,#eeeeee));
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#dddddd', endColorstr='#eeeeee',GradientType=0);
+	background: #ddd;
+	text-shadow: 1px 1px 0px #000;
+	background: -moz-linear-gradient(top, #eeeeee 0%, #dddddd 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #eeeeee), color-stop(100%, #dddddd));
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#eeeeee', endColorstr='#dddddd', GradientType=0);
 }
 
 #menu #second dd {
-	height: 14px;
-	margin: 5px 0;
+	height: 24px;
+	margin: 3px 0;
 	padding: 0 30px;
-	line-height: 14px;
-	border-right: 1px solid #808080;
+	line-height: 24px;
+	cursor: pointer;
 }
 
+#menu #second dd:HOVER {
+	
+}
+
+/* FASTNAVI */
 #fastnavi {
 	width: 100%;
 	position: absolute;
@@ -114,27 +108,27 @@ body {
 }
 
 #fastnavi #title_in {
-	border: 2px solid #ccc;
+	border: 1px solid #ccc;
 	font-weight: bold;
 	cursor: pointer;
 	float: right;
-	color:#555;
-	text-shadow:1px 1px 0px #fff;
-	background:#ddd;
-	background:-moz-linear-gradient(top, #eeeeee 0%, #dddddd 100%);
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#eeeeee), color-stop(100%,#dddddd));
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#eeeeee', endColorstr='#dddddd',GradientType=0);
+	color: #555;
+	text-shadow: 1px 1px 0px #000;
+	background: #ddd;
+	background: -moz-linear-gradient(top, #eeeeee 0%, #dddddd 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #eeeeee), color-stop(100%, #dddddd));
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#eeeeee', endColorstr='#dddddd', GradientType=0);
 	border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
 }
 
 #fastnavi #title_in:HOVER {
 	color: #000;
-	background:#eee;
-	background:-moz-linear-gradient(top, #dddddd 0%, #eeeeee 100%);
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#dddddd), color-stop(100%,#eeeeee));
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#dddddd', endColorstr='#eeeeee',GradientType=0);
+	background: #eee;
+	background: -moz-linear-gradient(top, #dddddd 0%, #eeeeee 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #dddddd), color-stop(100%, #eeeeee));
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#dddddd', endColorstr='#eeeeee', GradientType=0);
 }
 
 #fastnavi #naviButton {
@@ -148,7 +142,7 @@ body {
 #fastnavi #navi {
 	width: 111px;
 	display: none;
-	border: 2px solid #dcdcdc;
+	border: 1px solid #dcdcdc;
 	border-top: none;
 	background-color: #fff;
 	float: right;
@@ -272,16 +266,16 @@ body {
 #content .table .head {
 	width: 100%;
 	color: #eee;
-	font-weight: bold; 
+	font-weight: bold;
 	border: 1px solid #09365f;
-	text-shadow: 1px 1px 0px #09365f;
+	text-shadow: 1px 1px 0px #000;
 	background: #064884;
-	background: -moz-linear-gradient( top, #3b75b4 0%, #064884 100%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #3b75b4), color-stop(100%, #064884) );
-	filter: progid : DXImageTransform.Microsoft.gradient(startColorstr = '#3b75b4', endColorstr = '#064884', GradientType = 0);
+	background: -moz-linear-gradient(top, #3b75b4 0%, #064884 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #3b75b4), color-stop(100%, #064884));
+	filter: progid:   DXImageTransform.Microsoft.gradient(startColorstr=   '#3b75b4', endColorstr=   '#064884', GradientType=   0);
 	border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
 }
 
 #content .table .head .title {
@@ -348,11 +342,11 @@ body {
 	margin: 0 auto;
 }
 
-#content .table .form_source{
+#content .table .form_source {
 	background-color: #fff;
 	border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
 }
 
 #content .table .form_source dl {
@@ -367,8 +361,8 @@ body {
 #content .table .form_source input,textarea,img {
 	border: 1px solid #ccc;
 	border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
 }
 
 #content .table .form_source .source_name {
@@ -376,17 +370,17 @@ body {
 	text-align: center;
 }
 
-#content .table .form_source .source_name dd{
+#content .table .form_source .source_name dd {
 	height: 22px;
 	line-height: 22px;
 }
 
-#content .table .form_source .source_name .high{
+#content .table .form_source .source_name .high {
 	height: 77px;
 	line-height: 77px;
 }
 
-#content .table .form_source .source_name .img_120{
+#content .table .form_source .source_name .img_120 {
 	height: 120px;
 	line-height: 120px;
 }
@@ -415,11 +409,12 @@ body {
 	width: 100%;
 	color: #555;
 	border: 1px solid #dcdcdc;
-	background:#eee;
-	background:-moz-linear-gradient(top, #dddddd 0%, #eeeeee 100%);
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#dddddd), color-stop(100%,#eeeeee));
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#dddddd', endColorstr='#eeeeee',GradientType=0);
+	background: #eee;
+	text-shadow: 1px 1px 0px #000;
+	background: -moz-linear-gradient(top, #dddddd 0%, #eeeeee 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #dddddd), color-stop(100%, #eeeeee));
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#dddddd', endColorstr='#eeeeee', GradientType=0);
 	border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
 }
