--- a/WebContent/style/css/web.css
+++ b/WebContent/style/css/web.css
@@ -27,10 +27,10 @@ body {
 	color: #fff;
 	text-shadow: 1px 1px 0px #000;
 	background: #3b75b4;
-	background: -moz-linear-gradient(top, #064884 0%, #3b75b4 100%);
+	background: -moz-linear-gradient(top, #064884 0%, #064884 100%);
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #064884), color-stop(100%, #3b75b4));
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#064884', endColorstr='#3b75b4', GradientType=0);
-	border: 1px solid #3b75b4;
+	border: 1px solid #064884;
 }
 
 #menu {
@@ -272,7 +272,7 @@ body {
 	background: #064884;
 	background: -moz-linear-gradient(top, #3b75b4 0%, #064884 100%);
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #3b75b4), color-stop(100%, #064884));
-	filter: progid:   DXImageTransform.Microsoft.gradient(startColorstr=   '#3b75b4', endColorstr=   '#064884', GradientType=   0);
+	filter: progid:    DXImageTransform.Microsoft.gradient(startColorstr=    '#3b75b4', endColorstr=    '#064884', GradientType=    0);
 	border-radius: 5px;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
