--- a/WebContent/style/css/pss/web.css
+++ b/WebContent/style/css/pss/web.css
@@ -22,10 +22,16 @@ body {
 	color: #fff;
 	text-shadow: 1px 1px 0px #000;
 	background: #3b75b4;
-	background: -moz-linear-gradient(top, #064884 0%, #064884 100%);
+	background: -moz-linear-gradient(top, #064884 0%, #3b75b4 100%);
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #064884), color-stop(100%, #3b75b4));
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#064884', endColorstr='#3b75b4', GradientType=0);
 	border: 1px solid #064884;
+}
+
+#panel #user {
+	height: 45px;
+	float: right;
+	margin: 5px;
 }
 
 #menu {
