--- a/WebContent/style/css/comm/table.css
+++ b/WebContent/style/css/comm/table.css
@@ -56,6 +56,18 @@
 	width: 200px;
 }
 
+.table .text_300 {
+	width: 300px;
+}
+
+.table .text_400 {
+	width: 400px;
+}
+
+.table .text_500 {
+	width: 500px;
+}
+
 .table .text_5p {
 	width: 5%;
 	max-width: 60px;
@@ -98,10 +110,22 @@
 	min-width: 280px;
 }
 
+.table .text_45p {
+	width: 45%;
+	max-width: 480px;
+	min-width: 320px;
+}
+
+.table .text_50p {
+	width: 50%;
+	max-width: 540px;
+	min-width: 360px;
+}
+
 .table .text_55p {
 	width: 55%;
-	max-width: 660px;
-	min-width: 440px;
+	max-width: 560px;
+	min-width: 400px;
 }
 
 .table {
@@ -109,23 +133,19 @@
 }
 
 .form {
-	width: 50%;
+	width: 700px;
 	margin: 0 auto;
 }
 
 .table .head {
-	width: 100%;
 	color: #eee;
 	font-weight: bold;
+	text-shadow: 0px 1px 1px #000;
 	border: 1px solid #2980B9;
-	text-shadow: 1px 1px 0px #000;
 	background: #2980B9;
 	background: -moz-linear-gradient(top, #3498DB 0%, #2980B9 100%);
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #3498DB), color-stop(100%, #2980B9));
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#3b75b4', endColorstr='#2980B9', GradientType=0);
-	border-radius: 5px;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
 }
 
 .table .head .title {
@@ -137,7 +157,7 @@
 	padding: 0 10px;
 	margin: 7px 10px;
 	line-height: 16px;
-	border-left: 5px solid blue;
+	border-left: 5px solid #2C3E50;
 	float: left;
 }
 
@@ -146,10 +166,14 @@
 	padding: 0 10px;
 	margin: 7px 5px;
 	line-height: 16px;
-	border-left: 5px solid red;
+	border-left: 5px solid #95A5A6;
 	color: #dcdcdc;
 	cursor: pointer;
 	float: right;
+}
+
+.table .head .close:hover {
+	color: #E74C3C;
 }
 
 .table .head .source_head {
@@ -176,9 +200,8 @@
 }
 
 .table .source .source_line {
-	height: 26px;
-	line-height: 26px;
-	
+	height: 30px;
+	line-height: 30px;
 	border: 1px solid #dcdcdc;
 	border-bottom: 1px solid #dcdcdc;
 }
@@ -188,58 +211,68 @@
 }
 
 .table .source .source_line dd {
-	height: 26px;
-	line-height: 26px;
+	height: 30px;
+	line-height: 30px;
+	text-shadow: 0px 1px 1px #555;
 }
 
-.table .source .source_line dd input {
-	width: 14px;
-	height: 14px;
-	line-height: 14px;
-	margin: 6px 0;
+.table .source .source_line dd .checkbox {
+	display: block;
+	height: 20px;
+	width: 20px;
+	margin: 5px auto;
+	background: url("../../image/checkbox.png") -90px 0px no-repeat;
+}
+
+.table .source .source_line dd .checked {
+	background: url("../../image/checkbox.png") -60px -30px no-repeat;
 }
 
 .table .form_source {
 	background-color: #fff;
-	border-radius: 5px;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
 }
 
 .table .form_source dl {
 	float: left;
-	margin: 3px 0;
+	margin: 5px 0;
 }
 
 .table .form_source dl dd {
-	margin: 3px 0;
+	margin: 5px 0;
 }
 
-.table .form_source input,textarea,img {
-	border: 1px solid #ccc;
-	border-radius: 5px;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
+.table .form_source input,textarea,img,select {
+	border: 2px solid #ccc;
+	font-size: 14px;
+	font-family: "微软雅黑";
+}
+
+.table .form_source input:focus,textarea:focus,img:focus,select:focus {
+	border-color: #1abc9c;
+}
+
+.table .form_source .error {
+	border-color: #E74C3C;
 }
 
 .table .form_source .source_name {
-	width: 30%;
+	width: 120px;
 	text-align: center;
 }
 
 .table .form_source .source_name dd {
-	height: 22px;
-	line-height: 22px;
+	height: 34px;
+	line-height: 34px;
 }
 
 .table .form_source .source_name .high {
-	height: 77px;
-	line-height: 77px;
+	height: 89px;
+	line-height: 89px;
 }
 
-.table .form_source .source_name .img_120 {
-	height: 120px;
-	line-height: 120px;
+.table .form_source .source_name .img_150 {
+	height: 150px;
+	line-height: 150px;
 }
 
 .table .form_source .source_value {
@@ -249,49 +282,109 @@
 
 .table .form_source .source_value input {
 	height: 20px;
-	padding: 0 5px;
+	line-height: 20px;
+	padding: 5px;
 }
 
 .table .form_source .source_value textarea {
 	height: 75px;
-	padding: 0 5px;
+	padding: 5px;
+	overflow-y: auto;
+}
+
+.table .form_source .source_value select {
+	height: 34px;
+	line-height: 34px;
+	margin-right: 2px;
+	padding: 5px;
 }
 
 .table .form_source .source_value .img_150 {
 	height: 150px;
 }
 
+.table .form_source .source_value dd {
+	width: 100%;
+}
+
+.table .form_source .source_value dd input.done {
+	background: url("../../image/done.png") 99% 5px no-repeat;
+}
+
+.table .form_source .source_value dd textarea.done {
+	background: url("../../image/done.png") 99% 35px no-repeat;
+}
+
+.table .form_source .source_value dd img.done {
+	background: url("../../image/done.png") 50% 65px no-repeat;
+}
+
 .table .foot {
 	height: 30px;
-	width: 100%;
 	color: #555;
 	border: 1px solid #dcdcdc;
 	background: #eee;
-	text-shadow: 1px 1px 0px #dddddd;
+	text-shadow: 0px 1px 1px #808080;
 	background: -moz-linear-gradient(top, #dddddd 0%, #eeeeee 100%);
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #dddddd), color-stop(100%, #eeeeee));
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#dddddd', endColorstr='#eeeeee', GradientType=0);
-	border-radius: 5px;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
 }
 
-.table .foot div {
-	height: 14px;
-	line-height: 14px;
-	padding: 0 10px;
-	margin: 8px 5px;
-	border-left: 5px solid;
+.table .foot .left,.right,.left .page {
+	height: 30px;
+	line-height: 30px;
+}
+
+.table .foot .left .page dd:hover {
+	color: #3498DB;
+}
+
+.table .foot .left .page dd.active {
+	cursor: text;
+	color: #2980B9;
+}
+
+.table .foot .left div,.right div {
+	width: 50px;
+	height: 24px;
+	line-height: 24px;
+	margin: 3px 5px;
+	text-align: center;
 	cursor: pointer;
+}
+
+.table .foot .left,.left div,.left .page,.page dd {
+	float: left;
+}
+
+.table .foot .left .page {
+	margin-left: 30px;
+}
+
+.table .foot .left .page dd {
+	padding: 0 10px;
+	height: 20px;
+	line-height: 20px;
+	margin: 5px 0;
+	cursor: pointer;
+}
+
+.table .foot .right,.right div {
 	float: right;
 }
 
-.table .foot .add:hover {
-	color: #55a34a;
+.table .foot .add:hover,.sub:hover {
+	color: #27AE60;
 }
+
 .table .foot .edit:hover {
-	color: #c5a059;
+	color: #E67E22;
 }
+
 .table .foot .delete:hover {
-	color: #a02b2b;
+	color: #E74C3C;
+}
+
+.table .foot .check_all:hover,.check_invert:hover {
+	color: #16A085;
 }
