--- a/WebContent/style/css/pss/web.css
+++ b/WebContent/style/css/pss/web.css
@@ -33,8 +33,8 @@ body {
 
 #panel {
 	height: 55px;
-	color: #fff;
-	text-shadow: 1px 1px 0px #000;
+	color: #eee;
+	text-shadow: 0px 1px 1px #555;
 	background: #34495E;
 	background: -moz-linear-gradient(top, #34495E 0%, #2C3E50 100%);
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #34495E), color-stop(100%, #2C3E50));
@@ -67,7 +67,7 @@ body {
 	font-size: 14px;
 	font-weight: bold;
 	background: #7d8f33;
-	text-shadow: 1px 1px 0px #000;
+	text-shadow: 0px 1px 1px #000;
 	background: -moz-linear-gradient(top, #1ABC9C 0%, #16A085 100%);
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #1ABC9C), color-stop(100%, #16A085));
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#1ABC9C', endColorstr='#16A085', GradientType=0);
@@ -90,10 +90,10 @@ body {
 
 #menu #second {
 	height: 30px;
-	color: #555;
+	color: #000;
 	font-weight: bold;
 	background: #ddd;
-	text-shadow: 1px 1px 0px #000;
+	text-shadow: 0px 1px 1px #555;
 	background: -moz-linear-gradient(top, #eeeeee 0%, #dddddd 100%);
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #eeeeee), color-stop(100%, #dddddd));
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#eeeeee', endColorstr='#dddddd', GradientType=0);
