--- a/WebContent/view/test.html
+++ b/WebContent/view/test.html
@@ -164,13 +164,15 @@ body {
 			</div>  -->
 			<div class="login-form">
 				<div class="control-group">
-					<input type="text" class="login-field" value="" placeholder="请输入用户名" id="login-name" /> <label class="login-field-icon fui-man-16" for="login-name"></label>
+					<input type="text" class="login-field" value="" placeholder="请输入用户名" id="login-name" />
+					<label class="login-field-icon fui-man-16" for="login-name"></label>
 				</div>
-
 				<div class="control-group">
-					<input type="password" class="login-field" value="" placeholder="请输入密码" id="login-pass" /> <label class="login-field-icon fui-lock-16" for="login-pass"></label>
+					<input type="password" class="login-field" value="" placeholder="请输入密码" id="login-pass" />
+					<label class="login-field-icon fui-lock-16" for="login-pass"></label>
 				</div>
-				<a class="btn btn-primary btn-large btn-block" href="#">登录</a> <a class="login-link" href="#">忘记密码?</a>
+				<a class="btn btn-primary btn-large btn-block" href="#">登录</a>
+				<a class="login-link" href="#">忘记密码?</a>
 			</div>
 		</div>
 	</div>
