--- a/WebContent/style/css/comm/table.css
+++ b/WebContent/style/css/comm/table.css
@@ -330,7 +330,7 @@
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#dddddd', endColorstr='#eeeeee', GradientType=0);
 }
 
-.table .foot .left,.right,.left .page {
+.table .foot .left,.right,.left .btn,.left .page {
 	height: 30px;
 	line-height: 30px;
 }
@@ -344,7 +344,7 @@
 	color: #2980B9;
 }
 
-.table .foot .left div,.right div {
+.table .foot .left .btn div,.right div {
 	width: 50px;
 	height: 24px;
 	line-height: 24px;
@@ -353,12 +353,12 @@
 	cursor: pointer;
 }
 
-.table .foot .left,.left div,.left .page,.page dd {
+.table .foot .left,.left div,.left .btn,.left .page,.page dd {
 	float: left;
 }
 
-.table .foot .left .page {
-	margin-left: 30px;
+.table .foot .left .btn {
+	margin-right: 30px;
 }
 
 .table .foot .left .page dd {
