--- a/WebContent/style/css/pss/web.css
+++ b/WebContent/style/css/pss/web.css
@@ -18,7 +18,7 @@ body {
 	display: none;
 	height: 100%;
 	background-color: #000;
-	position: absolute;
+	position: fixed;
 	left: 0;
 	top: 0;
 	filter: alpha(opacity = 50);
@@ -115,6 +115,7 @@ body {
 #fastnavi {
 	width: 100%;
 	position: absolute;
+	display: none;
 }
 
 #fastnavi #title {
