--- a/WebContent/style/css/pss/web.css
+++ b/WebContent/style/css/pss/web.css
@@ -26,6 +26,13 @@ body {
 	opacity: 0.5;
 }
 
+#load {
+	position: absolute;
+	z-index: 1002;
+	border: none;
+	display: none;
+}
+
 #top {
 	width: 100%;
 	margin-bottom: 20px;
