--- a/WebContent/style/css/pss/web.css
+++ b/WebContent/style/css/pss/web.css
@@ -23,14 +23,14 @@ input:focus,textarea:focus,img:focus,select:focus {
 }
 
 #modal {
+	left: 0;
+	top: 0;
 	z-index: 1000;
 	width: 100%;
 	display: none;
 	height: 100%;
 	background-color: #000;
 	position: fixed;
-	left: 0;
-	top: 0;
 	filter: alpha(opacity =     50);
 	-moz-opacity: 0.5;
 	opacity: 0.5;
@@ -45,6 +45,7 @@ input:focus,textarea:focus,img:focus,select:focus {
 
 #head {
 	width: 100%;
+	height: 65px;
 }
 
 #panel {
@@ -65,13 +66,52 @@ input:focus,textarea:focus,img:focus,select:focus {
 }
 
 #content{
+	position: absolute;
 	width: 100%;
+	left: 0;
+	right: 0;
+	top: 65px;
+	bottom: 0;
 }
 
+#main {
+	position: absolute;
+	left: 182px;
+	right: 0;
+	top: 0;
+	bottom: 0;
+}
+
+#menu-navi {
+	height: 30px;
+	line-height: 30px;
+	margin-bottom: 20px;
+	border-bottom: 5px solid #808080;
+}
+
+#navi-title {
+	padding-left: 15px;
+	font-weight: bold;
+}
+
+#frame {
+	overflow-x: hidden;
+	overflow-y: auto;
+}
+
+#ui-iframe {
+	position: absolute;
+}
+
+/* MENU */
 #menu {
+	position: absolute;
 	width: 182px;
-	background: #fff;
-	float: left;
+	background: #808080;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
 }
 
 #menuList {
@@ -79,7 +119,7 @@ input:focus,textarea:focus,img:focus,select:focus {
 	text-align: center;
 }
 
-#menuList #menu-head {
+#menu-head {
 	height: 35px;
 	background: #ddd;
 	text-shadow: 0px 1px 1px #000;
@@ -92,16 +132,11 @@ input:focus,textarea:focus,img:focus,select:focus {
 	height: 30px;
 	line-height: 30px;
 	font-weight: bold;
-	/*background: #ddd;
-	text-shadow: 0px 1px 1px #000;
-	background: -moz-linear-gradient(top, #eeeeee 0%, #dddddd 100%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #eeeeee), color-stop(100%, #dddddd));
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#eeeeee', endColorstr='#dddddd', GradientType=0);*/
 	background: url("../../image/menu-title-bg.gif") top left no-repeat;
 }
 
 #menuList .open {
-	/*background: url("../images/app/second-menu-open-bg.gif") top left no-repeat;*/
+	
 }
 
 #menuList .menu-item {
@@ -133,32 +168,6 @@ input:focus,textarea:focus,img:focus,select:focus {
 	display: none;
 	height: 5px;
 	background: url("../../image/menu-topline.gif") top left no-repeat
-}
-
-#main {
-	float: left;
-}
-
-#menu-navi {
-	width: 100%;
-	height: 30px;
-	line-height: 30px;
-	margin-bottom: 20px;
-}
-
-#navi-title {
-	padding-left: 15px;
-	font-weight: bold;
-	border-bottom: 5px solid #808080;
-}
-
-#frame {
-	
-}
-
-#frame iframe {
-	overflow-x: hidden;
-	overflow-y: auto;
 }
 
 /* CONTENT COMM */
