--- a/WebContent/style/css/comm/ui.css
+++ b/WebContent/style/css/comm/ui.css
@@ -424,16 +424,15 @@
 .tip-msg {
 	height: 32px;
 	line-height: 32px;
+	text-align: center;
 }
 
 .tip-msg span {
-	display: block;
 	height: 32px;
 	line-height: 32px;
-	margin: 0 20px;
 	padding-left: 40px;
-	text-align: left;
 	font-weight: bold;
+	display: inline-block;
 }
 
 .tip-info {
@@ -442,10 +441,10 @@
 
 .tip-error {
 	color: #e60000;
-	background: url("../../image/tip-info-error.png") left top no-repeat;
+	background: url("../../image/tip-error-bg.png") left top no-repeat;
 }
 
 .tip-warning {
 	color: #d35400;
-	background: url("../../image/tip-info-warning.png") left top no-repeat;
+	background: url("../../image/tip-warning-bg.png") left top no-repeat;
 }
