--- a/WebContent/style/css/comm/ui.css
+++ b/WebContent/style/css/comm/ui.css
@@ -1,128 +1,128 @@
 @CHARSET "UTF-8";
 
 /* COMM */
-.text_10 {
+.text-10 {
 	width: 10px;
 }
 
-.text_15 {
+.text-15 {
 	width: 15px;
 }
 
-.text_20 {
+.text-20 {
 	width: 20px;
 }
 
-.text_30 {
+.text-30 {
 	width: 30px;
 }
 
-.text_40 {
+.text-40 {
 	width: 40px;
 }
 
-.text_50 {
+.text-50 {
 	width: 50px;
 }
 
-.text_60 {
+.text-60 {
 	width: 60px;
 }
 
-.text_70 {
+.text-70 {
 	width: 70px;
 }
 
-.text_80 {
+.text-80 {
 	width: 80px;
 }
 
-.text_90 {
+.text-90 {
 	width: 90px;
 }
 
-.text_100 {
+.text-100 {
 	width: 100px;
 }
 
-.text_120 {
+.text-120 {
 	width: 120px;
 }
 
-.text_150 {
+.text-150 {
 	width: 150px;
 }
 
-.text_200 {
+.text-200 {
 	width: 200px;
 }
 
-.text_300 {
+.text-300 {
 	width: 300px;
 }
 
-.text_400 {
+.text-400 {
 	width: 400px;
 }
 
-.text_500 {
+.text-500 {
 	width: 500px;
 }
 
-.text_5p {
+.text-5p {
 	width: 5%;
 	min-width: 40px;
 }
 
-.text_10p {
+.text-10p {
 	width: 8%;
 	padding: 0 5px;
 	min-width: 60px;
 }
 
-.text_15p {
+.text-15p {
 	width: 13%;
 	padding: 0 5px;
 	min-width: 100px;
 }
 
-.text_20p {
+.text-20p {
 	width: 18%;
 	padding: 0 5px;
 	min-width: 140px;
 }
 
-.text_25p {
+.text-25p {
 	width: 23%;
 	padding: 0 5px;
 	min-width: 180px;
 }
 
-.text_30p {
+.text-30p {
 	width: 28%;
 	padding: 0 5px;
 	min-width: 220px;
 }
 
-.text_35p {
+.text-35p {
 	width: 33%;
 	padding: 0 5px;
 	min-width: 260px;
 }
 
-.text_45p {
+.text-45p {
 	width: 43%;
 	padding: 0 5px;
 	min-width: 300px;
 }
 
-.text_50p {
+.text-50p {
 	width: 48%;
 	padding: 0 5px;
 	min-width: 340px;
 }
 
-.text_55p {
+.text-55p {
 	width: 53%;
 	padding: 0 5px;
 	min-width: 380px;
