--- a/WebContent/style/css/pss/web.css
+++ b/WebContent/style/css/pss/web.css
@@ -4,7 +4,6 @@ body,html {
 	font: 14px "Microsoft Yahei", sans-serif;
 	background-color: #eee;
 	background-image: url("../../image/body_bg.png");
-	overflow: hidden;
 }
 
 input,textarea,img,select {
@@ -54,6 +53,7 @@ input:focus,textarea:focus,img:focus,select:focus {
 #head {
 	width: 100%;
 	height: 65px;
+	overflow:hidden;
 }
 
 #panel {
@@ -76,7 +76,7 @@ input:focus,textarea:focus,img:focus,select:focus {
 #menu-navi {
 	height: 30px;
 	line-height: 30px;
-	margin-bottom: 20px;
+	margin: 0 0 20px 182px;
 	border-bottom: 5px solid #808080;
 }
 
@@ -85,23 +85,18 @@ input:focus,textarea:focus,img:focus,select:focus {
 	font-weight: bold;
 }
 
-#menu,#menu-navi,#content {
-	float: left;
-	display: inline;
-}
-
-#content {
-	margin: 0 20px;
-}
-
 /* MENU */
 #menu {
 	width: 182px;
 	background: #808080;
+	position:absolute;
+	top:65px;
 	left: 0;
 	right: 0;
-	top: 0;
-	bottom: 0;
+	bottom:0;
+	border-left: 0 none;
+	height:auto;
+	_height:expression(document.body.offsetHeight - 66 + 'px');
 }
 
 #menuList {
