优化首页框架，完成部分自定义树功能

--- a/WebContent/style/css/comm/ui.css
+++ b/WebContent/style/css/comm/ui.css
@@ -129,6 +129,12 @@
 }
 
 /* UI */
+.ui-dialog {
+	z-index: 1003;
+	position: absolute;
+	display: none;
+}
+
 .ui-table {
 	width: 100%;
 }
@@ -441,12 +447,6 @@
 
 .btn-check-all:hover,.btn-check-invert:hover {
 	color: #16A085;
-}
-
-.ui-dialog {
-	z-index: 1003;
-	position: fixed;
-	display: none;
 }
 
 .tip-body {
