--- a/WebContent/style/css/pss/web.css
+++ b/WebContent/style/css/pss/web.css
@@ -96,13 +96,12 @@ input:focus,textarea:focus,img:focus,select:focus {
 /* MENU */
 #menu {
 	width: 182px;
-	background: #808080;
+	background: #BDC3C7;
 	position: absolute;
 	top: 65px;
 	left: 0;
 	right: 0;
 	bottom: 0;
-	border-left: 0 none;
 	height: auto;
 	_height: expression(document.body.offsetHeight -   66 +   'px');
 }
@@ -125,7 +124,11 @@ input:focus,textarea:focus,img:focus,select:focus {
 	height: 30px;
 	line-height: 30px;
 	font-weight: bold;
-	background: url("../../image/menu-title-bg.gif") top left no-repeat;
+	background: #ECF0F1;
+	background: -moz-linear-gradient(top, #BDC3C7 0%, #ECF0F1 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #BDC3C7), color-stop(100%, #ECF0F1));
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#BDC3C7', endColorstr='#ECF0F1', GradientType=0);
+	//background: url("../../image/menu-title-bg.gif") top left no-repeat;
 }
 
 #menuList .open {
@@ -141,11 +144,12 @@ input:focus,textarea:focus,img:focus,select:focus {
 	width: 100%;
 	height: 26px;
 	line-height: 26px;
-	background: url("../../image/menu-item-bg.gif") top left no-repeat;
+	background: #95A5A6;
+	//background: url("../../image/menu-item-bg.gif") top left no-repeat;
 }
 
 .menu-item span:hover {
-	background: url("../../image/menu-item-hover-bg.gif") top left no-repeat;
+	//background: url("../../image/menu-item-hover-bg.gif") top left no-repeat;
 }
 
 .menu-item span.active {
@@ -160,7 +164,8 @@ input:focus,textarea:focus,img:focus,select:focus {
 .top-line {
 	display: none;
 	height: 5px;
-	background: url("../../image/menu-topline.gif") top left no-repeat
+	background: #27AE60;
+	//background: url("../../image/menu-topline.gif") top left no-repeat
 }
 
 .frame_class {
